--- a/templates/base.html
+++ b/templates/base.html
@@ -20,10 +20,10 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="{% url 'products' %}">Home</a>
+            <a class="navbar-brand" href="#">Домашняя страница</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'product_add' %}">New Product</a>
+                <a class="nav-link active" aria-current="page" href="#">Новая запись</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
