--- a/templates/guestbooks.html
+++ b/templates/guestbooks.html
@@ -10,15 +10,15 @@
 
 
 <div class="row">
-{% for guest in guests %}
+{% for guestbook in guestbooks %}
 
-<div class="col-xl-3 card mb-3 ms-3 text-dark bg-light" style="max-width: 600px;">
+<div class="col-xl-3 card mb-3 ms-3 text-dark bg-light" style="max-width: 540px;">
     <div class="row g-0 ">
         <div class="col-md-8">
             <div class="card-body">
-            <h5 class="card-title">{{ guest.name }}</h5>
-            <p class="card-text">{{ guest.mail }}</p>
-            <p class="card-text"><small class="text-muted">{{ guest.text }}</small></p>
+            <h5 class="card-title">{{ guestbook.guestname }}</h5>
+            <p class="card-text">{{ guestbook.mail }}</p>
+            <p class="card-text"><small class="text-muted">{{ guestbook.text }}</small></p>
             </div>
         </div>
     </div>
