Реализована функция добавления новой записи

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             <a class="navbar-brand" href="#">Домашняя страница</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Новая запись</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'guestbooks_add' %}">Новая запись</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
