реализованы иконки (редактирование, удаление)

--- a/templates/guestbooks.html
+++ b/templates/guestbooks.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}
     Гостевая книга 
@@ -19,8 +20,8 @@
             <h5 class="card-title">{{ guestbook.guestname }}</h5>
             <p class="card-text">{{ guestbook.mail }}</p>
             <p class="card-text"><small class="text-muted">{{ guestbook.text }}</small></p>
-            <a href="{% url 'guestbooks_edit' guestbook.pk %}"><img src="" alt="">Редактирование</a>
-            <a href="{% url 'guestbooks_delete' guestbook.pk %}"><img src="" alt="">Удаление</a>
+            <a href="{% url 'guestbooks_edit' guestbook.pk %}"><img src="{% static 'img/edit.svg' %}" width="30" height="31" alt="edit"></a>
+            <a href="{% url 'guestbooks_delete' guestbook.pk %}"><img src="{% static 'img/delete.svg' %}" width="30" height="31" alt="delete"></a>
             </div>
         </div>
     </div>
