--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#">Домашняя страница</a>
+            <a class="navbar-brand" href="{% url 'guestbooks' %}">Домашняя страница</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'guestbooks_add' %}">Новая запись</a>
