--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,5 @@
-/* body{
-    background-color: chocolate;
-} */
+body{
+    background-color: rgb(142, 156, 129);
+    font-family: 'Times New Roman', Times, serif
+}
+
